Update: Completed data science project final version

--- a/student.ipynb
+++ b/student.ipynb
@@ -952,27 +952,98 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "d19d017b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The safest commonly used aircraft model is 'A321' with only 20 recorded accidents.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Group by aircraft model and count number of accidents\n",
+    "model_accidents = df['Model'].value_counts()\n",
+    "\n",
+    "# Filter to only include models that appear at least 20 times\n",
+    "common_models = model_accidents[model_accidents >= 20]\n",
+    "\n",
+    "# Sort to find the one with the fewest accidents\n",
+    "safest_model = common_models.idxmin()\n",
+    "safest_count = common_models.min()\n",
+    "\n",
+    "print(f\"The safest commonly used aircraft model is '{safest_model}' with only {safest_count} recorded accidents.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "32d17403",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Safest commonly used model (30+ appearances): 421B with 30 accidents.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Estimated Safety Score = Total Accidents / Total Uses\n",
+    "# Count how many times each model appears (proxy for use)\n",
+    "model_counts = df['Model'].value_counts()\n",
+    "\n",
+    "# Filter to only models with at least 30 appearances to avoid rare models\n",
+    "model_counts_common = model_counts[model_counts >= 30]\n",
+    "\n",
+    "# Create a DataFrame of accident count and usage count\n",
+    "model_safety_df = pd.DataFrame({\n",
+    "    'Model': model_counts_common.index,\n",
+    "    'Accident_Count': model_counts_common.values,\n",
+    "    'Safety_Score': model_counts_common.values / model_counts_common.values  # always 1 for now\n",
+    "})\n",
+    "\n",
+    "# In this context, 'Safety Score' = number of accidents per use\n",
+    "# We assume each row = 1 accident, so total count ≈ total accidents\n",
+    "# If you had flight volume data, you'd divide accident count by flight volume instead\n",
+    "\n",
+    "# For now, just sort to find the lowest accident count among commonly used models\n",
+    "safest_model = model_safety_df.sort_values(by='Accident_Count').iloc[0]\n",
+    "\n",
+    "# Print results\n",
+    "print(f\"Safest commonly used model (30+ appearances): {safest_model['Model']} with {safest_model['Accident_Count']} accidents.\")\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "bd26e340",
+   "id": "3a9ec2f5",
    "metadata": {},
    "source": [
-    "## Conclusion\n",
+    "## Final Conclusion\n",
     "\n",
-    "After analyzing aviation accident data from 1962 to 2023, we found that:\n",
+    "Our analysis of U.S. aircraft accident data from 1962–2023 focused on identifying both high-risk and low-risk aircraft models using accident frequency as a proxy for safety and usage.\n",
     "\n",
-    "- Certain aircraft models consistently appear in more accidents, possibly due to their popularity or operational risks.\n",
-    "- The majority of accidents involve airplane-type aircraft (as opposed to helicopters, gliders, etc.).\n",
-    "- High-risk phases of flight include takeoff, landing, and approach.\n",
-    "- Weather conditions like IMC (Instrument Meteorological Conditions) are associated with more serious incidents.\n",
+    "- The aircraft model with the **fewest accidents among commonly used models (30+ accidents)** was:  \n",
+    "  **421B** with only **30** recorded incidents.\n",
+    "  \n",
+    "This suggests that this model is statistically safer and potentially more cost-effective for companies entering the aviation industry.\n",
     "\n",
-    "## Recommendation\n",
+    "Additionally:\n",
+    "- Most accidents occurred during **takeoff, landing**, and **approach**, confirming these phases as the most critical for safety precautions.\n",
+    "- Weather conditions, especially IMC (instrument conditions), were also significant risk factors.\n",
     "\n",
-    "Based on historical accident data:\n",
-    "- The company should consider aircraft models with fewer reported accidents.\n",
-    "- Emphasis should be placed on pilot training during critical flight phases (takeoff/landing).\n",
-    "- Investing in aircraft equipped with advanced weather and flight systems is advised to reduce IMC-related risks.\n",
+    "### Recommendation\n",
     "\n",
-    "Overall, using data-driven insights helps make safer and smarter aviation investment decisions.\n"
+    "- Invest in aircraft models with historically lower accident rates like **A321**.\n",
+    "- Focus training and monitoring around the **takeoff and landing phases**.\n",
+    "- Ensure all aircraft are equipped for **all-weather conditions** and pilots are trained for IMC operations.\n",
+    "\n",
+    "These insights, based on historical data, provide a data-driven foundation for making safer and more strategic aviation investments."
    ]
   }
  ],
